--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,19 @@
     <groupId>com.rao.java</groupId>
     <artifactId>MyLearnings</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+            <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+            <dependency>
+                <groupId>org.apache.pdfbox</groupId>
+                <artifactId>pdfbox</artifactId>
+                <version>2.0.9</version>
+            </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
