--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,28 @@
             <version>1.11.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.api.client/google-api-client -->
+        <dependency>
+            <groupId>com.google.api.client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.4.0-alpha</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.6</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.http-client/google-http-client -->
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client</artifactId>
+            <version>1.27.0</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
